Redesigned Poll Setup Various Tweaks

--- a/TwitchChatinator/App.config
+++ b/TwitchChatinator/App.config
@@ -22,7 +22,7 @@
         <value />
       </setting>
       <setting name="PollChromaKey" serializeAs="String">
-        <value>000000000</value>
+        <value>Black</value>
       </setting>
       <setting name="PollAllowMulti" serializeAs="String">
         <value>False</value>
@@ -40,16 +40,16 @@
         <value />
       </setting>
       <setting name="PollOption1Color" serializeAs="String">
-        <value>000191255</value>
+        <value>Maroon</value>
       </setting>
       <setting name="PollOption2Color" serializeAs="String">
-        <value>219112147</value>
+        <value>RoyalBlue</value>
       </setting>
       <setting name="PollOption3Color" serializeAs="String">
-        <value>124252000</value>
+        <value>Orange</value>
       </setting>
       <setting name="PollOption4Color" serializeAs="String">
-        <value>255165000</value>
+        <value>ForestGreen</value>
       </setting>
       <setting name="PollLeftMargin" serializeAs="String">
         <value>1</value>
@@ -69,26 +69,23 @@
       <setting name="PollBarWidth" serializeAs="String">
         <value>300</value>
       </setting>
-      <setting name="PollFontName" serializeAs="String">
-        <value>Segoe UI</value>
-      </setting>
-      <setting name="PollTitleSize" serializeAs="String">
-        <value>16</value>
+      <setting name="PollTitleFont" serializeAs="String">
+        <value>Segoe UI, 15.75pt</value>
       </setting>
       <setting name="PollTitleColor" serializeAs="String">
-        <value>255255255</value>
+        <value>White</value>
       </setting>
-      <setting name="PollCountSize" serializeAs="String">
-        <value>12</value>
+      <setting name="PollCountFont" serializeAs="String">
+        <value>Segoe UI, 12pt</value>
       </setting>
       <setting name="PollCountColor" serializeAs="String">
-        <value>255255255</value>
+        <value>White</value>
       </setting>
-      <setting name="PollTotalSize" serializeAs="String">
-        <value>16</value>
+      <setting name="PollTotalFont" serializeAs="String">
+        <value>Segoe UI, 14.25pt</value>
       </setting>
       <setting name="PollTotalColor" serializeAs="String">
-        <value>255255255</value>
+        <value>White</value>
       </setting>
       <setting name="PollTotalWidth" serializeAs="String">
         <value>60</value>
