--- a/TwitchChatinator/TwitchChatinator.csproj
+++ b/TwitchChatinator/TwitchChatinator.csproj
@@ -135,6 +135,15 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\InputBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ManagePolls.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ManagePolls.Designer.cs">
+      <DependentUpon>ManagePolls.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\RunPoll.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -171,6 +180,7 @@
     <Compile Include="Forms\PaintWindow.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Libs\SerializableFont.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.Designer.cs">
@@ -185,6 +195,10 @@
     <Compile Include="Forms\WelcomeScreen.Designer.cs">
       <DependentUpon>WelcomeScreen.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Forms\InputBox.resx" />
+    <EmbeddedResource Include="Forms\ManagePolls.resx">
+      <DependentUpon>ManagePolls.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\MessageBrowser.resx">
       <DependentUpon>MessageBrowser.cs</DependentUpon>
     </EmbeddedResource>
