--- a/TwitchChatinator/TwitchChatinator.csproj
+++ b/TwitchChatinator/TwitchChatinator.csproj
@@ -150,11 +150,23 @@
     <Compile Include="Forms\LaunchPoll.Designer.cs">
       <DependentUpon>LaunchPoll.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ManageGiveaway.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ManageGiveaway.Designer.cs">
+      <DependentUpon>ManageGiveaway.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ManagePolls.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\ManagePolls.Designer.cs">
       <DependentUpon>ManagePolls.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\RunGiveaway.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\RunGiveaway.Designer.cs">
+      <DependentUpon>RunGiveaway.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\RunPollBar.cs">
       <SubType>Form</SubType>
@@ -162,17 +174,17 @@
     <Compile Include="Forms\RunPollBar.Designer.cs">
       <DependentUpon>RunPollBar.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\RunRoll.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\RunRoll.Designer.cs">
-      <DependentUpon>RunRoll.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\SetupBarGraph.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\SetupBarGraph.Designer.cs">
       <DependentUpon>SetupBarGraph.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\SetupGiveaway.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SetupGiveaway.Designer.cs">
+      <DependentUpon>SetupGiveaway.cs</DependentUpon>
     </Compile>
     <Compile Include="Options\BarGraphOptions.cs" />
     <Compile Include="Libs\DataStore.cs" />
@@ -195,6 +207,7 @@
     <Compile Include="Libs\SerializableFont.cs" />
     <Compile Include="Options\GiveawayOptions.cs" />
     <Compile Include="Options\PositionsSaver.cs" />
+    <Compile Include="Options\StorableImage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.Designer.cs">
@@ -216,20 +229,26 @@
     <EmbeddedResource Include="Forms\LaunchPoll.resx">
       <DependentUpon>LaunchPoll.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ManageGiveaway.resx">
+      <DependentUpon>ManageGiveaway.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ManagePolls.resx">
       <DependentUpon>ManagePolls.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MessageBrowser.resx">
       <DependentUpon>MessageBrowser.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\RunRoll.resx">
-      <DependentUpon>RunRoll.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\RunGiveaway.resx">
+      <DependentUpon>RunGiveaway.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SetCredentialsScreen.resx">
       <DependentUpon>SetCredentialsScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SetupBarGraph.resx">
       <DependentUpon>SetupBarGraph.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SetupGiveaway.resx">
+      <DependentUpon>SetupGiveaway.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
