--- a/TwitchChatinator/TwitchChatinator.csproj
+++ b/TwitchChatinator/TwitchChatinator.csproj
@@ -134,55 +134,55 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Forms\InputBox.cs">
+    <Compile Include="Forms\Components\InputBox.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\LaunchGiveaway.cs">
+    <Compile Include="Forms\Launchers\LaunchGiveaway.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\LaunchGiveaway.Designer.cs">
+    <Compile Include="Forms\Launchers\LaunchGiveaway.Designer.cs">
       <DependentUpon>LaunchGiveaway.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\LaunchPoll.cs">
+    <Compile Include="Forms\Launchers\LaunchPoll.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\LaunchPoll.Designer.cs">
+    <Compile Include="Forms\Launchers\LaunchPoll.Designer.cs">
       <DependentUpon>LaunchPoll.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\RunGiveaway.cs">
+    <Compile Include="Forms\Runners\RunGiveaway.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\RunGiveaway.Designer.cs">
+    <Compile Include="Forms\Runners\RunGiveaway.Designer.cs">
       <DependentUpon>RunGiveaway.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\RunPollBar.cs">
+    <Compile Include="Forms\Runners\RunPollBar.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\RunPollBar.Designer.cs">
+    <Compile Include="Forms\Runners\RunPollBar.Designer.cs">
       <DependentUpon>RunPollBar.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\RunPollPie.cs">
+    <Compile Include="Forms\Runners\RunPollPie.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\RunPollPie.Designer.cs">
+    <Compile Include="Forms\Runners\RunPollPie.Designer.cs">
       <DependentUpon>RunPollPie.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\SetupPieGraph.cs">
+    <Compile Include="Forms\Setups\SetupPieGraph.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\SetupPieGraph.Designer.cs">
+    <Compile Include="Forms\Setups\SetupPieGraph.Designer.cs">
       <DependentUpon>SetupPieGraph.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\SetupBarGraph.cs">
+    <Compile Include="Forms\Setups\SetupBarGraph.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\SetupBarGraph.Designer.cs">
+    <Compile Include="Forms\Setups\SetupBarGraph.Designer.cs">
       <DependentUpon>SetupBarGraph.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\SetupGiveaway.cs">
+    <Compile Include="Forms\Setups\SetupGiveaway.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\SetupGiveaway.Designer.cs">
+    <Compile Include="Forms\Setups\SetupGiveaway.Designer.cs">
       <DependentUpon>SetupGiveaway.cs</DependentUpon>
     </Compile>
     <Compile Include="Options\BarGraphOptions.cs" />
@@ -200,7 +200,7 @@
     <Compile Include="Forms\SetCredentialsScreen.Designer.cs">
       <DependentUpon>SetCredentialsScreen.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\PaintWindow.cs">
+    <Compile Include="Forms\Components\PaintWindow.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Libs\SerializableFont.cs" />
@@ -222,29 +222,29 @@
     <Compile Include="Forms\WelcomeScreen.Designer.cs">
       <DependentUpon>WelcomeScreen.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Forms\InputBox.resx" />
-    <EmbeddedResource Include="Forms\LaunchGiveaway.resx">
+    <EmbeddedResource Include="Forms\Components\InputBox.resx" />
+    <EmbeddedResource Include="Forms\Launchers\LaunchGiveaway.resx">
       <DependentUpon>LaunchGiveaway.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\LaunchPoll.resx">
+    <EmbeddedResource Include="Forms\Launchers\LaunchPoll.resx">
       <DependentUpon>LaunchPoll.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MessageBrowser.resx">
       <DependentUpon>MessageBrowser.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\RunGiveaway.resx">
+    <EmbeddedResource Include="Forms\Runners\RunGiveaway.resx">
       <DependentUpon>RunGiveaway.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SetCredentialsScreen.resx">
       <DependentUpon>SetCredentialsScreen.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\SetupPieGraph.resx">
+    <EmbeddedResource Include="Forms\Setups\SetupPieGraph.resx">
       <DependentUpon>SetupPieGraph.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\SetupBarGraph.resx">
+    <EmbeddedResource Include="Forms\Setups\SetupBarGraph.resx">
       <DependentUpon>SetupBarGraph.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\SetupGiveaway.resx">
+    <EmbeddedResource Include="Forms\Setups\SetupGiveaway.resx">
       <DependentUpon>SetupGiveaway.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
