Working on Auth

--- a/TwitchChatinator/App.config
+++ b/TwitchChatinator/App.config
@@ -24,7 +24,7 @@
       <setting name="TwitchPassword" serializeAs="String">
         <value />
       </setting>
-      <setting name="TwithChannel" serializeAs="String">
+      <setting name="TwitchChannel" serializeAs="String">
         <value />
       </setting>
     </TwitchChatinator.Settings>
