--- a/TwitchChatinator/Settings.settings
+++ b/TwitchChatinator/Settings.settings
@@ -1,7 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)"
-              GeneratedClassNamespace="TwitchChatinator" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TwitchChatinator" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="TwitchUsername" Type="System.String" Scope="User">
@@ -10,7 +8,7 @@
     <Setting Name="TwitchPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="TwithChannel" Type="System.String" Scope="User">
+    <Setting Name="TwitchChannel" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
