--- a/TwitchChatinator/packages.config
+++ b/TwitchChatinator/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="IrcDotNet" version="0.6.1" targetFramework="net45" />
+  <package id="RestSharpSigned" version="105.2.3" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.104.0" targetFramework="net45" />
 </packages>
